--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Pilih hormon untuk melihat efeknya pada tubuh manusia!</p>
         
         <div class="hormone-buttons">
-            <button id="adrenalin-btn">Adrenalin</button>
+            <button id="adrenalin-btn">Adrenaline</button>
             <button id="dopamin-btn">Dopamin</button>
             <button id="melatonin-btn">Melatonin</button>
             <button id="insulin-btn">Insulin</button>
@@ -46,4 +46,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
